--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 		<title>Website ONE</title>
 	</head>
 	<body>
+		<img src="images/deadpool-wonderwoman.jpg" alt="Deadpool loves wonderwoman"/>
 	</body>
 </html>
