--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Website ONE</title>
 	</head>
 	<body>
-		<img src="images/deadpool-wonderwoman.jpg" alt="Deadpool loves wonderwoman"/>
+		<a href="http://marvel.com/characters"><img src="images/deadpool-wonderwoman.jpg" alt="Deadpool loves wonderwoman"/></a>
+		<br>
+		<a href="http://louisrbeller.info/"><h1>Click ME!</h1></a>
 	</body>
 </html>
